welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:6: error: method posFin has return statement; needs result type
		return b
                ^